# cargo-newvsc

./: Cargo.toml  LICENSE  Readme.md
assets/: tasks.json
src/: main.rs
